[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/KeyOpen.gd" type="Script" id=1]
[ext_resource path="res://textures/key2dindex.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 29.715, 49.4128 )

[sub_resource type="Animation" id=2]

resource_name = "keyanim"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Spriteright:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spriteright:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ), Vector2( 20, 0 ), Vector2( 10, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spriteleft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 0 ), Vector2( -20, 0 ), Vector2( -10, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Spriteleft:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="KeyOpen" type="Node2D"]

script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 0, 0.0944691 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )

[node name="Spriteright" type="Sprite" parent="." index="1"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 10, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Spriteleft" type="Sprite" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( -10, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
flip_h = true
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/keyanim = SubResource( 2 )
blend_times = [  ]

[node name="TimerAnimEnd" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="timeout" from="TimerAnimEnd" to="." method="_on_TimerAnimEnd_timeout"]


